--- a/template/htmls/OT2transfer.html
+++ b/template/htmls/OT2transfer.html
@@ -3,26 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ User }} Opentrons Scripts</title>
+    <title>{{ user }}'s Opentrons Scripts</title>
     <link href = "{{url_for('static', filename='styles/style.css')}}" rel = "stylesheet" />
 </head>
 
 
 
 <body>
-    <h1>{{ User }} Opentrons Scripts</h1>
+    <h1>{{ user }} Opentrons Scripts</h1>
     
     <p>Welcome! Here are your Alberdi script(s) for the Opentrons OT-2. Good Luck</p>
 
-    <p></p>
-
-
-
+    <p>
+        You chose: <br>
+        Protocol: {{protocol}} <br>
+        User: {{user}} <br>
+        Number of Samples: {{samplenumber}} <br>
+        Input Format: {{inputformat}} <br>
+        Output Format: {{outputformat}} <br>
+    </p>
+    
+    <p>
+        Here are your protocol(s). <br><br>
+        {{finished_protocol1}}<br><br>
+        {{finished_protocol2}}<br><br>
+        {{finished_protocol3}}<br><br>
+    </p>
     
 
-    
-
-
+    <a href="index.html">Return to Main page</a>
 
 
 
