--- a/template/htmls/index.html
+++ b/template/htmls/index.html
@@ -70,12 +70,78 @@
 
                 <p>
                     <label for="inputformat">Input Format of Samples</label><br>
-                    <input type="text" name="inputformat" id="inputformat" placeholder="LVL SXS200" required>
+                    <select name="inputformat" id="inputformat">
+                        
+                        <optgroup label="DNA/RNA Extraction">
+                            <option value="PCRstrip">PCR strip</option>
+                            <option value="PCRplate">PCR plate</option>
+                            <option value="LVLSXS200">LVL SXS200</option>
+                            <option value="LVLXL1000">LVL XL1000</option>
+                        </optgroup>
+
+                        <optgroup label="Library Building">
+                            <option value="PCRstrip">PCR strip</option>
+                            <option value="PCRplate">PCR plate</option>
+                            <option value="LVLSXS200">LVL SXS200</option>
+                            <option value="LVLXL1000">LVL XL1000</option>
+                        </optgroup>
+
+                        <optgroup label="qPCR">
+                            <option value="PCRstrip">PCR strip</option>
+                            <option value="PCRplate">PCR plate</option>
+                            <option value="LVLSXS200">LVL SXS200</option>
+                            <option value="LVLXL1000">LVL XL1000</option>
+                        </optgroup>
+
+                        <optgroup label="Index PCR">
+                            <option value="PCRstrip">PCR strip</option>
+                            <option value="PCRplate">PCR plate</option>
+                            <option value="LVLSXS200">LVL SXS200</option>
+                            <option value="LVLXL1000">LVL XL1000</option>
+                        </optgroup>
+                        
+                    </select>
+                    
+                    
                 </p>
 
                 <p>
                     <label for="outputformat">Output Format of Samples</label><br>
-                    <input type="text" name="outputformat" id="outputformat" placeholder="LVL SXS200" required>
+                    <select name="outputformat" id="outputformat">
+                        
+                        <optgroup label="DNA/RNA Extraction">
+                            <option value="PCRstrip">PCR strip</option>
+                            <option value="PCRplate">PCR plate</option>
+                            <option value="LVLSXS200">LVL SXS200</option>
+                            <option value="LVLXL1000">LVL XL1000</option>
+                        </optgroup>
+
+                        <optgroup label="Library Building">
+                            <option value="PCRstrip">PCR strip</option>
+                            <option value="PCRplate">PCR plate</option>
+                            <option value="LVLSXS200">LVL SXS200</option>
+                            <option value="LVLXL1000">LVL XL1000</option>
+                        </optgroup>
+
+                        <optgroup label="qPCR">
+                            <option value="PCRstrip">PCR strip</option>
+                            <option value="PCRplate">PCR plate</option>
+                            <option value="LVLSXS200">LVL SXS200</option>
+                            <option value="LVLXL1000">LVL XL1000</option>
+                        </optgroup>
+
+                        <optgroup label="Index PCR">
+                            <option value="PCRstrip">PCR strip</option>
+                            <option value="PCRplate">PCR plate</option>
+                            <option value="LVLSXS200">LVL SXS200</option>
+                            <option value="LVLXL1000">LVL XL1000</option>
+                        </optgroup>
+                        
+                    </select>
+                    
+                    
+                    
+                    
                 </p>
                 
                 
