--- a/template/htmls/index.html
+++ b/template/htmls/index.html
@@ -41,7 +41,8 @@
     <main>
         <section id="Datasubmission">
             <h2>Data submission</h2>
-            <p>In the following section you will have to select what protocol you wish to download, and input what  what your run is going to be, and some basic information to rename the file for easier tracking. Below the submission there is a explanation of each submission.</p>
+            <p>In the following section you will have to select what protocol you wish to download, and input what  what your run is going to be, and some basic information to rename the file for easier tracking. Below the submission there is a explanation of each submission.
+            </p>
 
 
             
