--- a/template/htmls/index copy.html
+++ b/template/htmls/index copy.html
@@ -46,7 +46,7 @@
 
 
             
-            <form action="/OT2transfer" method="POST" enctype="multipart/form-data">
+            <form action="/https://httpbin.org/post" method="POST" enctype="multipart/form-data">
                 <fieldset>
                     <legend>User Data Input</legend>
                 <p>
@@ -156,7 +156,7 @@
 
 
                 <p>
-                    <button type="submit">Submit</button>
+                    <button type="submit" formaction="/https://httpbin.org/post">Submit</button>
                     <button type="reset">Reset</button>
                 </p>
                 </fieldset>
