--- a/template/htmls/OT2transfer.html
+++ b/template/htmls/OT2transfer.html
@@ -23,7 +23,12 @@
         Output Format: {{outputformat}} <br>
     </p>
     
-
+    <p>
+        Here are your protocol(s). <br><br>
+        {{finished_protocol1}}<br><br>
+        {{finished_protocol2}}<br><br>
+        {{finished_protocol3}}<br><br>
+    </p>
     
 
     <a href="/index.html">Return to Main page</a>
