--- a/template/htmls/index.html
+++ b/template/htmls/index.html
@@ -39,129 +39,119 @@
     <hr>
 
     <main>
-        <section id="Datasubmission">
-            <h2>Data submission</h2>
-            <p>In the following section you will have to select what protocol you wish to download, and input what  what your run is going to be, and some basic information to rename the file for easier tracking. Below the submission there is a explanation of each submission.
-            </p>
-
-
-            
-            <form action="/OT2transfer" method="POST" enctype="multipart/form-data">
-                <fieldset>
-                    <legend>User Data Input</legend>
-                <p>
-                    <label for="protocol">Choose a Protocol</label><br>
-                    <select id="protocol" name="protocol">
-                        <option value="Extraction">Extraction</option>
-                        <option value="Library">Library</option>
-                        <option value="qPCR">qPCR</option>
-                        <option value="IndexPCR">IndexPCR</option>
-                    </select>
+           
+        <article>
+            <section id="Datasubmission">
+                <h2>Data submission</h2>
+                <p>In the following section you will have to select what protocol you wish to download, and input what  what your run is going to be, and some basic information to rename the file for easier tracking. Below the submission there is a explanation of each submission.
                 </p>
+    
+    
+                <form action="/csvOT2transfer.py" method="POST" enctype="multipart/form-data"> 
+                    <fieldset>
+                        <legend>User Data Input</legend>
+                    <p>
+                        <label for="protocol">Choose a Protocol</label><br>
+                        <select id="protocol" name="protocol">
+                            <option value="Extraction">Extraction</option>
+                            <option value="Library">Library</option>
+                            <option value="qPCR">qPCR</option>
+                            <option value="IndexPCR">IndexPCR</option>
+                        </select>
+                    </p>
+    
+                    <p>
+                        <label for="user">User</label><br>
+                        <input type="text" name="user" id="user" placeholder="User/Name/RunID" required>
+                    </p>
+    
+                    <p>
+                        <label for="samples">Number of Samples</label><br>
+                        <input type="number" name="samples" id="samples" placeholder="96" required>
+                    </p>
+    
+                    <p>
+                        <label for="inputformat">Input Format of Samples</label><br>
+                        <select name="inputformat" id="inputformat">
+                                
+                            <optgroup label="DNA/RNA Extraction">
+                                <option value="PCRstrip">PCR strip</option>
+                                <option value="PCRplate">PCR plate</option>
+                                <option value="LVLSXS200">LVL SXS200</option>
+                                <option value="LVLXL1000">LVL XL1000</option>
+                            </optgroup>
+    
+                            <optgroup label="Library Building">
+                                <option value="PCRstrip">PCR strip</option>
+                                <option value="PCRplate">PCR plate</option>
+                                <option value="LVLSXS200">LVL SXS200</option>
+                                <option value="LVLXL1000">LVL XL1000</option>
+                            </optgroup>
+    
+                            <optgroup label="qPCR">
+                                <option value="PCRstrip">PCR strip</option>
+                                <option value="PCRplate">PCR plate</option>
+                                <option value="LVLSXS200">LVL SXS200</option>
+                                <option value="LVLXL1000">LVL XL1000</option>
+                            </optgroup>
+    
+                            <optgroup label="Index PCR">
+                                <option value="PCRstrip">PCR strip</option>
+                                <option value="PCRplate">PCR plate</option>
+                                <option value="LVLSXS200">LVL SXS200</option>
+                                <option value="LVLXL1000">LVL XL1000</option>
+                            </optgroup>
+                        </select>
+                    </p>
 
-                <p>
-                    <label for="user">User</label><br>
-                    <input type="text" name="user" id="user" placeholder="User/Name/RunID" required>
-                </p>
-
-                <p>
-                    <label for="samples">Number of Samples</label><br>
-                    <input type="number" name="samples" id="samples" placeholder="96" required>
-                </p>
-
-                <p>
-                    <label for="inputformat">Input Format of Samples</label><br>
-                    <select name="inputformat" id="inputformat">
-                        
+                    <p>
+                        <label for="outputformat">Output Format of Samples</label><br>
+                        <select name="outputformat" id="outputformat">
+                                
                         <optgroup label="DNA/RNA Extraction">
                             <option value="PCRstrip">PCR strip</option>
-                            <option value="PCRplate">PCR plate</option>
-                            <option value="LVLSXS200">LVL SXS200</option>
-                            <option value="LVLXL1000">LVL XL1000</option>
-                        </optgroup>
-
-                        <optgroup label="Library Building">
-                            <option value="PCRstrip">PCR strip</option>
-                            <option value="PCRplate">PCR plate</option>
-                            <option value="LVLSXS200">LVL SXS200</option>
-                            <option value="LVLXL1000">LVL XL1000</option>
-                        </optgroup>
-
-                        <optgroup label="qPCR">
-                            <option value="PCRstrip">PCR strip</option>
-                            <option value="PCRplate">PCR plate</option>
-                            <option value="LVLSXS200">LVL SXS200</option>
-                            <option value="LVLXL1000">LVL XL1000</option>
-                        </optgroup>
-
-                        <optgroup label="Index PCR">
-                            <option value="PCRstrip">PCR strip</option>
-                            <option value="PCRplate">PCR plate</option>
-                            <option value="LVLSXS200">LVL SXS200</option>
-                            <option value="LVLXL1000">LVL XL1000</option>
-                        </optgroup>
+                                <option value="PCRplate">PCR plate</option>
+                                <option value="LVLSXS200">LVL SXS200</option>
+                                <option value="LVLXL1000">LVL XL1000</option>
+                            </optgroup>
+    
+                            <optgroup label="Library Building">
+                                <option value="PCRstrip">PCR strip</option>
+                                <option value="PCRplate">PCR plate</option>
+                                <option value="LVLSXS200">LVL SXS200</option>
+                                <option value="LVLXL1000">LVL XL1000</option>
+                            </optgroup>
+    
+                            <optgroup label="qPCR">
+                                <option value="PCRstrip">PCR strip</option>
+                                <option value="PCRplate">PCR plate</option>
+                                <option value="LVLSXS200">LVL SXS200</option>
+                                <option value="LVLXL1000">LVL XL1000</option>
+                            </optgroup>
+    
+                            <optgroup label="Index PCR">
+                                <option value="PCRstrip">PCR strip</option>
+                                <option value="PCRplate">PCR plate</option>
+                                <option value="LVLSXS200">LVL SXS200</option>
+                                <option value="LVLXL1000">LVL XL1000</option>
+                            </optgroup>
+                        </select>
+                    </p>
                         
-                    </select>
-                    
-                    
-                </p>
-
-                <p>
-                    <label for="outputformat">Output Format of Samples</label><br>
-                    <select name="outputformat" id="outputformat">
-                        
-                        <optgroup label="DNA/RNA Extraction">
-                            <option value="PCRstrip">PCR strip</option>
-                            <option value="PCRplate">PCR plate</option>
-                            <option value="LVLSXS200">LVL SXS200</option>
-                            <option value="LVLXL1000">LVL XL1000</option>
-                        </optgroup>
-
-                        <optgroup label="Library Building">
-                            <option value="PCRstrip">PCR strip</option>
-                            <option value="PCRplate">PCR plate</option>
-                            <option value="LVLSXS200">LVL SXS200</option>
-                            <option value="LVLXL1000">LVL XL1000</option>
-                        </optgroup>
-
-                        <optgroup label="qPCR">
-                            <option value="PCRstrip">PCR strip</option>
-                            <option value="PCRplate">PCR plate</option>
-                            <option value="LVLSXS200">LVL SXS200</option>
-                            <option value="LVLXL1000">LVL XL1000</option>
-                        </optgroup>
-
-                        <optgroup label="Index PCR">
-                            <option value="PCRstrip">PCR strip</option>
-                            <option value="PCRplate">PCR plate</option>
-                            <option value="LVLSXS200">LVL SXS200</option>
-                            <option value="LVLXL1000">LVL XL1000</option>
-                        </optgroup>
-                        
-                    </select>
-                    
-                    
-                    
-                    
-                </p>
-                
-                
-                <p>
-                    <Label for="myFile">Excel or CSV data for normalisation and library building. <a href="/template/Template_CSV_LibraryInput.xlsx">Excel Template</a><br>
-                    <input type="file" id="myFile" name="myFile" accept=".csv" data-show-if="protocol:Library Building" >
-                    <p><em>The file upload is required for Library protocols</em></Label><br></p>
-                    
-                </p>
-
-                <br>
-
-                <p>
-                    <button type="submit">Submit</button>
-                    <button type="reset">Reset</button>
-                </p>
-                </fieldset>
-            </form>
-        </section>
+                    <p>
+                        <Label for="myFile">Excel or CSV data for normalisation and library building. <a href="/template/Template_CSV_LibraryInput.xlsx">Excel Template</a><br>
+                        <input type="file" id="myFile" name="myFile" accept=".csv" data-show-if="protocol:Library Building" >
+                        <p><em>The file upload is required for Library protocols</em></Label><br></p>
+                    </p>
+    
+                    <p>
+                        <button type="submit">Submit</button>
+                        <button type="reset">Reset</button>
+                    </p>
+                    </fieldset>
+                </form>
+            </section>
+        </article>
         
         
         <br>
