--- a/template/htmls/index.html
+++ b/template/htmls/index.html
@@ -47,7 +47,7 @@
                 </p>
     
     
-                <form action="/csvOT2transfer.py" method="POST" enctype="multipart/form-data"> 
+                <form action="OT2transfer" method="POST" enctype="multipart/form-data"> 
                     <fieldset>
                         <legend>User Data Input</legend>
                     <p>
