--- a/template/htmls/OT2transfer.html
+++ b/template/htmls/OT2transfer.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <h1>{ user } Opentrons Scripts</h1>
+    <h1>{{ user }} Opentrons Scripts</h1>
     
     <p>Welcome! Here are your Alberdi script(s) for the Opentrons OT-2. Good Luck</p>
 
@@ -23,7 +23,14 @@
         Output Format: {{outputformat}} <br>
     </p>
     
+    <p>
+        Here are your protocol(s). <br><br>
 
+        <a href="{{ url_for('finished_protocol1') }}">Download Protocol 1</a><br><br>
+        <a href="{{ url_for('finished_protocol2') }}">Download Protocol 2</a><br><br>
+        <a href="{{ url_for('finished_protocol3') }}">Download Protocol 3</a>
+
+    </p>
     
 
     <a href="/index.html">Return to Main page</a>
