--- a/template/htmls/OT2transfer.html
+++ b/template/htmls/OT2transfer.html
@@ -26,9 +26,9 @@
     <p>
         Here are your protocol(s). <br><br>
 
-        <a href="{{ url_for('finished_protocol1') }}">Download Protocol 1</a><br><br>
-        <a href="{{ url_for('finished_protocol2') }}">Download Protocol 2</a><br><br>
-        <a href="{{ url_for('finished_protocol3') }}">Download Protocol 3</a>
+        <a href="{{ 'finished_protocol1' }}">Download Protocol 1</a><br><br>
+        <a href="{{ 'finished_protocol2' }}">Download Protocol 2</a><br><br>
+        <a href="{{ 'finished_protocol3' }}">Download Protocol 3</a><br><br>
 
     </p>
     
