--- a/template/htmls/index.html
+++ b/template/htmls/index.html
@@ -141,7 +141,7 @@
                         
                     <p>
                         <Label for="myFile">Excel or CSV data for normalisation and library building. <a href="/template/Template_CSV_LibraryInput.xlsx">Excel Template</a><br>
-                        <input type="file" id="myFile" name="myFile" accept=".csv" data-show-if="protocol:Library Building" >
+                        <input type="file" id="myFile" name="myFile" accept=".csv">
                         <p><em>The file upload is required for Library protocols</em></Label><br></p>
                     </p>
     
