--- a/template/htmls/index.html
+++ b/template/htmls/index.html
@@ -48,7 +48,7 @@
                 </p>
     
     
-                <form action="https://httpbin.org/post" method="POST" enctype="multipart/form-data"> 
+                <form action="/OT2transfer" method="POST" enctype="multipart/form-data"> 
                     <fieldset>
                         <legend>User Data Input</legend>
                     <p>
