--- a/template/htmls/OT2transfer.html
+++ b/template/htmls/OT2transfer.html
@@ -29,6 +29,10 @@
     </p>
     
 
+    <p>
+        Here should the datafile be: {{datafile}}
+    </p>
+
     <a href="/index.html">Return to Main page</a>
 
 
