--- a/template/htmls/OT2transfer.html
+++ b/template/htmls/OT2transfer.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <h1>{{ user }} Opentrons Scripts</h1>
+    <h1>{{ user[0] }} Opentrons Scripts</h1>
     
     <p>Welcome! Here are your Alberdi script(s) for the Opentrons OT-2. Good Luck</p>
 
