--- a/template/OT2transfer.html
+++ b/template/OT2transfer.html
@@ -16,11 +16,11 @@
 
     <p>
         You chose: <br>
-        Protocol: {{protocol[0]}} <br>
-        User: {{user[0]}} <br>
-        Number of Samples: {{samplenumber[0]}} <br>
-        Input Format: {{inputformat[0]}} <br>
-        Output Format: {{outputformat[0]}} <br>
+        Protocol: {{protocol}} <br>
+        User: {{user}} <br>
+        Number of Samples: {{samplenumber}} <br>
+        Input Format: {{inputformat}} <br>
+        Output Format: {{outputformat}} <br>
     </p>
     
     <p>
@@ -33,7 +33,7 @@
         Here should the datafile be: {{datafile['FileStorage']}}
     </p>
 
-    <a href="/index.html">Return to Main page</a>
+    <a href="/index">Return to Main page</a>
 
 
 
