--- a/template/OT2transfer.html
+++ b/template/OT2transfer.html
@@ -25,7 +25,7 @@
     
     <p>
         Here are your protocol(s). <br><br>
-        <a href="{{ 'get_opentrons_script' }}" download="opentrons_scripts.zip">Download Scripts</a>
+        <a href="{{ url_for('get_opentrons_script') }}" download="opentrons_scripts.zip">Download Scripts</a>
     </p>
     
 
