--- a/template/OT2transfer.html
+++ b/template/OT2transfer.html
@@ -21,6 +21,8 @@
         Number of Samples: {{samplenumber}} <br>
         Input Format: {{inputformat}} <br>
         Output Format: {{outputformat}} <br>
+        Naming: {{naming}} <br>
+        Req: {{req}} <br>
     </p>
     
     <p>
