--- a/template/index.html
+++ b/template/index.html
@@ -68,7 +68,7 @@
     
                     <p>
                         <label for="samples">Number of Samples</label><br>
-                        <input type="number" name="samples" id="samples" placeholder="96" required>
+                        <input type="number" name="samples" id="samples" placeholder="96" min="1" max="96" required>
                     </p>
     
                     <p>
