--- a/template/OT2transfer.html
+++ b/template/OT2transfer.html
@@ -33,7 +33,7 @@
     
 
     <p>
-        Here should the datafile be: {{datafile['FileStorage']}}
+        Here should the datafile be: {{userdata}}
     </p>
 
     <a href="/index">Return to Main page</a>
