--- a/template/OT2transfer.html
+++ b/template/OT2transfer.html
@@ -34,6 +34,9 @@
 
     <p>
         Here should the datafile be: {{userdata}}
+        <br><br>
+
+        Or Here should the datafile be: {{userfil}}
     </p>
 
     <a href="/index">Return to Main page</a>
