--- a/template/OT2transfer.html
+++ b/template/OT2transfer.html
@@ -34,9 +34,12 @@
 
     <p>
         Here should the datafile be: {{userdata}}
-        <br><br>
 
-        Or Here should the datafile be: {{userfil}}
+        <br>
+
+        <a href="{{get_opentrons_script}}">Download here</a>
+
+
     </p>
 
     <a href="/index">Return to Main page</a>
