--- a/template/get_OT2_scripts.html
+++ b/template/get_OT2_scripts.html
@@ -1,27 +1,22 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ user }}'s Opentrons Scripts</title>
+    <title> Opentrons Scripts</title>
     <link href = "{{url_for('static', filename='styles/style.css')}}" rel = "stylesheet" />
 </head>
 
 
 
 <body>
-    <h1>{{ user[0] }}'s Opentrons Scripts</h1>
+    <h1> hELLO</h1>
     
     <p>Welcome! Here are your Alberdi script(s) for the Opentrons OT-2. Good Luck</p>
 
     <p>
         You chose: <br>
-        Protocol: {{protocol[0]}} <br>
-        User: {{user[0]}} <br>
-        Number of Samples: {{samplenumber[0]}} <br>
-        Input Format: {{inputformat[0]}} <br>
-        Output Format: {{outputformat[0]}} <br>
-        Naming: {{naming[0]}} <br>
+        <br>
     </p>
     
     <p>
