--- a/template/OT2transfer.html
+++ b/template/OT2transfer.html
@@ -34,9 +34,9 @@
     <p>
         Here should the datafile be: {{userdata[0]}}
 
-        <br>
+        <br><br><br><br><br>
 
-        <a href="{{get_opentrons_script}}">Download here</a>
+        <a href="{{get_opentrons_script}}" download="Opentrons Scripts">Download here</a>
 
 
     </p>
