--- a/template/index.html
+++ b/template/index.html
@@ -140,7 +140,7 @@
                     </p>
                         
                     <p>
-                        <Label for="myFile">Excel or CSV data for normalisation and library building. <a href="/template/Template_CSV_LibraryInput.xlsx">Excel Template</a><br>
+                        <Label for="myFile">Excel or CSV data for normalisation and library building. <a href="static\other_templates\Template_CSV_LibraryInput.xlsx">Excel Template</a><br>
                         <input type="file" id="myFile" name="myFile">
                         <p><em>The file upload is required for Library protocols</em></Label><br></p>
                     </p>
