--- a/template/index.html
+++ b/template/index.html
@@ -76,31 +76,25 @@
                         <select name="inputformat" id="inputformat">
                                 
                             <optgroup label="DNA/RNA Extraction">
-                                <option value="PCRstrip">PCR strip</option>
-                                <option value="PCRplate">PCR plate</option>
-                                <option value="LVLSXS200">LVL SXS200</option>
-                                <option value="LVLXL1000">LVL XL1000</option>
+                                <option value="DeepwellPlate">DeepwellPlate</option>
                             </optgroup>
     
                             <optgroup label="Library Building">
                                 <option value="PCRstrip">PCR strip</option>
                                 <option value="PCRplate">PCR plate</option>
                                 <option value="LVLSXS200">LVL SXS200</option>
-                                <option value="LVLXL1000">LVL XL1000</option>
                             </optgroup>
     
                             <optgroup label="qPCR">
                                 <option value="PCRstrip">PCR strip</option>
                                 <option value="PCRplate">PCR plate</option>
                                 <option value="LVLSXS200">LVL SXS200</option>
-                                <option value="LVLXL1000">LVL XL1000</option>
                             </optgroup>
     
                             <optgroup label="Index PCR">
                                 <option value="PCRstrip">PCR strip</option>
                                 <option value="PCRplate">PCR plate</option>
                                 <option value="LVLSXS200">LVL SXS200</option>
-                                <option value="LVLXL1000">LVL XL1000</option>
                             </optgroup>
                         </select>
                     </p>
@@ -109,33 +103,28 @@
                         <label for="outputformat">Output Format of Samples</label><br>
                         <select name="outputformat" id="outputformat">
                                 
-                        <optgroup label="DNA/RNA Extraction">
-                            <option value="PCRstrip">PCR strip</option>
+                            <optgroup label="DNA/RNA Extraction">
+                                <option value="PCRstrip">PCR strip</option>
                                 <option value="PCRplate">PCR plate</option>
                                 <option value="LVLSXS200">LVL SXS200</option>
-                                <option value="LVLXL1000">LVL XL1000</option>
                             </optgroup>
     
                             <optgroup label="Library Building">
                                 <option value="PCRstrip">PCR strip</option>
                                 <option value="PCRplate">PCR plate</option>
                                 <option value="LVLSXS200">LVL SXS200</option>
-                                <option value="LVLXL1000">LVL XL1000</option>
                             </optgroup>
     
                             <optgroup label="qPCR">
-                                <option value="PCRstrip">PCR strip</option>
-                                <option value="PCRplate">PCR plate</option>
-                                <option value="LVLSXS200">LVL SXS200</option>
-                                <option value="LVLXL1000">LVL XL1000</option>
+                                <option value="qPCRstrip">qPCR strip</option>
+                                <option value="qPCRplate">qPCR plate*</option>
                             </optgroup>
     
                             <optgroup label="Index PCR">
                                 <option value="PCRstrip">PCR strip</option>
                                 <option value="PCRplate">PCR plate</option>
-                                <option value="LVLSXS200">LVL SXS200</option>
-                                <option value="LVLXL1000">LVL XL1000</option>
                             </optgroup>
+                            
                         </select>
                     </p>
                         
