--- a/template/OT2transfer.html
+++ b/template/OT2transfer.html
@@ -12,7 +12,7 @@
 <body>
     <h1>{{ user[0] }}'s Opentrons Scripts</h1>
     
-    <p>Welcome! Here are your Alberdi script(s) for the Opentrons OT-2. Good Luck</p>
+    <p>Welcome! Here are your Alberdi script(s) for the Opentrons OT2. Good Luck</p>
 
     <p>
         You chose: <br>
@@ -30,13 +30,13 @@
         <br><br>
         <a href="{{get_opentrons_script}}" download="Opentrons Scripts"> Download {{naming}}'s zip folder here</a>
         <br><br>
-        In the Zip folder you will find: Up to 3 sets of opentrons scripts and their respective standard operation procedures (SOPs). The SOP will describe health and safety consideration, labware needed<br>
-        The opentrons OT2 can use a wide variety of labware, however, not all labware has a predefined value in the OT2 system. As such the zipfolder also contain custom labware definitions (.json files) that you will to upload to the OT2 app. See more at the <a href="https://support.opentrons.com/s/article/Import-a-custom-labware-definition">Opentrons Webiste</a>. The custom labware has been verified in our lab, however it is always recommend to run a dry run to examine compatability.
+        In the Zip folder you will find: Up to 3 sets of opentrons scripts and their respective standard operation procedures (SOPs). The SOP will describe how to operate and assist the OT2. It also includes health and safety consideration, labware needed, FAQ, etc. <br>
+        The opentrons OT2 can use a wide variety of labware, however, not all labware has a predefined value in the OT2 system. As such the zipfolder also contain custom labware definitions (.json files) that you will to upload to the OT2 app. In the SOP the labware for each run will be present, including potential labware catalogue numbers. <br> The custom labware has been verified in our lab, however it is always recommend to run a dry run to examine compatability. See more at the <a href="https://support.opentrons.com/s/article/Import-a-custom-labware-definition">Opentrons Webiste</a>. 
     </p>
 
     <hr>
 
-    <a href="/index">Return to Main page</a>
+    <a href="/">Return to Main page</a>
 
 
 
