--- a/template/index.html
+++ b/template/index.html
@@ -32,7 +32,7 @@
         <h2>Overview</h2>
         <ul>
             <li><a href="#Datasubmission">Data Submission</a></li>
-            <li><a href="#Explanation">Input Explanation</a></li>
+            <li><a href="#Explanation">Data Submission Explanation</a></li>
         </ul>
     </nav>
 
@@ -45,6 +45,7 @@
                 <h2>Data submission</h2>
                 <p>In the following section you will have to select what protocol you wish to download, and input what  what your run is going to be, and some basic information to rename the file for easier tracking. Below the submission there is a explanation of each submission. 
                     "/OT2transfer.html" enctype="multipart/form-data" "https://httpbin.org/post"
+                    <br><br>
                 </p>
     
     
@@ -149,7 +150,7 @@
 
         <section id="Explanation">
             <br>
-            <h3>Submission explanation</h3>
+            <h3>Data Submission explanation</h3>
             <br>
             <p>The following paragraph is an indepth explanation about what each User Input field is expecting.</p>
             br
