--- a/template/index.html
+++ b/template/index.html
@@ -21,7 +21,8 @@
     <header>
         <section id="Introduction">
             <h1>Online Download of Opentrons Script for the Alberdi lab</h1>
-            <p>Welcome! On this website, <a href="https://www.alberdilab.dk/index.html" target="_blank">The Alberdi Lab</a> keep an downloadable version of the opentrons scripts we use. The webiste runs on Render [Link] using the Flask [Link] Python package running the Github repository[Link]. </p>
+            <br>
+            <p>Welcome! On this website, <a href="https://www.alberdilab.dk/index.html" target="_blank">The Alberdi Lab</a> keep an downloadable version of the opentrons scripts we use. The webiste runs on <a href="https://render.com/">Render</a> using the <a href="https://flask.palletsprojects.com/en/3.0.x/">Flask</a> Python package running the Github repository <a href="https://github.com/KU-JonasL/OT2_Website">KU-JonasL/OT2_Website</a> created by Jonas Greve Lauritsen for the Alberdi Group. </p>
         </section>
     </header>
 
@@ -43,6 +44,7 @@
         <article>
             <section id="Datasubmission">
                 <h2>Data submission</h2>
+                <br>
                 <p>In the following section you will have to select what protocol you wish to download, and input what  what your run is going to be, and some basic information to rename the file for easier tracking. Below the submission there is a explanation of each submission. 
                     "/OT2transfer.html" enctype="multipart/form-data" "https://httpbin.org/post"
                     <br><br>
