--- a/template/OT2transfer.html
+++ b/template/OT2transfer.html
@@ -26,10 +26,13 @@
     <hr>
 
     <h2>Zip folder </h2>
-    <p>
-        <br><br>
+    <p class = "center">
+        <br>
         Download <a href="{{get_opentrons_script}}" download="Opentrons Scripts">  {{naming}}'s zip folder</a> here.
-        <br><br>
+        <br>
+    </p>
+    <p>
+            
         In the Zip folder you will find: Up to 3 sets of opentrons scripts and their respective standard operation procedures (SOPs). The SOP will describe how to operate and assist the OT2. It also includes health and safety consideration, labware needed, FAQ, etc. <br><br>
         The opentrons OT2 can use a wide variety of labware, however, not all labware has a predefined value in the OT2 system. As such the zipfolder also contain custom labware definitions (.json files) that you will to upload to the OT2 app. In the SOP the labware for each run will be present, including potential labware catalogue numbers. <br><br>
         The custom labware has been verified in our lab, however it is always recommend to run a dry run to examine compatability. See more at the <a href="https://support.opentrons.com/s/article/Import-a-custom-labware-definition">Opentrons Webiste</a>. Good Luck! 
