--- a/template/csv-not-found.html
+++ b/template/csv-not-found.html
@@ -21,7 +21,8 @@
     <header>
         <section id="Introduction">
             <h1>Online Download of Opentrons Script for the Alberdi lab</h1>
-            <p>Welcome! On this website, <a href="https://www.alberdilab.dk/index.html" target="_blank">The Alberdi Lab</a> keep an downloadable version of the opentrons scripts we use. The webiste runs on Render [Link] using the Flask [Link] Python package running the Github repository[Link]. </p>
+            <br>
+            <p>Welcome! On this website, <a href="https://www.alberdilab.dk/index.html" target="_blank">The Alberdi Lab</a> keep an downloadable version of the opentrons scripts we use. The webiste runs on <a href="https://render.com/">Render</a> using the <a href="https://flask.palletsprojects.com/en/3.0.x/">Flask</a> Python package running the Github repository <a href="https://github.com/KU-JonasL/OT2_Website">KU-JonasL/OT2_Website</a> created by Jonas Greve Lauritsen for the Alberdi Group. </p>
         </section>
     </header>
 
@@ -40,6 +41,8 @@
 
     <main>
         <article>
+
+            <p style="color:#FF0000" style="font-size:160%"><Strong>Error in submission! Please upload a csv file following the template when downloading scripts for library building.</Strong></p>
             <section id="Datasubmission">
                 <h2>Data submission</h2>
                 <br>
@@ -163,7 +166,10 @@
 
     <footer>
     <p>&lt;&lt;&lt;&nbsp;&copy;Jonas Greve Lauritsen & The Alberdi Group &nbsp;&gt;&gt;&gt;</p>
+    <a href="/">Return to Main page</a>
+    <br>
     <p><a href="#">Return to top</a></p>
+
     </footer>
 
 
