--- a/template/index.html
+++ b/template/index.html
@@ -119,7 +119,7 @@
     
                             <optgroup label="qPCR">
                                 <option value="qPCRstrip">qPCR strip</option>
-                                <option value="qPCRplate">qPCR plate*</option>
+                                <! –– <option value="qPCRplate">qPCR plate*</option> ––>
                             </optgroup>
     
                             <optgroup label="Index PCR">
