--- a/template/index.html
+++ b/template/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <figure>
-        <img src="/static/img/alberdilab-110x110.png" alt="The Alberdi Lab">
+        <a href="https://www.alberdilab.dk/index.html" target="_blank"><img src="/static/img/alberdilab-110x110.png" alt="The Alberdi Lab"></a> 
         <figcaption>The image and its rights belongs to *Alberdi Lab*</figcaption>
     </figure>
     
